@@ -1,15 +1,15 @@
 package io.jenkins.plugins.coverage.metrics.steps;
 
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.List;
-
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
 
 import edu.hm.hafner.coverage.Metric;
 import edu.hm.hafner.util.FilteredLog;
+
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.List;
 
 import io.jenkins.plugins.coverage.metrics.AbstractCoverageTest;
 import io.jenkins.plugins.coverage.metrics.model.Baseline;
@@ -23,10 +23,10 @@ import static io.jenkins.plugins.util.assertions.Assertions.*;
 class CoverageQualityGateEvaluatorTest extends AbstractCoverageTest {
     @Test
     void shouldBeInactiveIfGatesAreEmpty() {
-        CoverageQualityGateEvaluator evaluator = new CoverageQualityGateEvaluator(new ArrayList<>(), createStatistics());
+        var evaluator = new CoverageQualityGateEvaluator(new ArrayList<>(), createStatistics());
 
         var log = new FilteredLog("Errors");
-        QualityGateResult result = evaluator.evaluate(new NullResultHandler(), log);
+        var result = evaluator.evaluate(new NullResultHandler(), log);
 
         assertThat(result)
                 .hasNoMessages()
@@ -56,12 +56,12 @@ class CoverageQualityGateEvaluatorTest extends AbstractCoverageTest {
         qualityGates.add(new CoverageQualityGate(minimum, Metric.FILE, Baseline.MODIFIED_FILES_DELTA, QualityGateCriticality.UNSTABLE));
         qualityGates.add(new CoverageQualityGate(minimum, Metric.LINE, Baseline.MODIFIED_FILES_DELTA, QualityGateCriticality.UNSTABLE));
 
-        CoverageQualityGateEvaluator evaluator = new CoverageQualityGateEvaluator(qualityGates, createStatistics());
+        var evaluator = new CoverageQualityGateEvaluator(qualityGates, createStatistics());
 
         assertThat(evaluator).isEnabled();
 
         var log = new FilteredLog("Errors");
-        QualityGateResult result = evaluator.evaluate(new NullResultHandler(), log);
+        var result = evaluator.evaluate(new NullResultHandler(), log);
 
         assertThat(result).hasOverallStatus(QualityGateStatus.PASSED).isSuccessful().isNotInactive().hasMessages(
                 "[Overall project - File Coverage]: ≪Success≫ - (Actual value: 75.00%, Quality gate: 0.00)",
@@ -88,12 +88,12 @@ class CoverageQualityGateEvaluatorTest extends AbstractCoverageTest {
         qualityGates.add(new CoverageQualityGate(0, Metric.FILE, Baseline.MODIFIED_LINES_DELTA, QualityGateCriticality.UNSTABLE));
         qualityGates.add(new CoverageQualityGate(0, Metric.LINE, Baseline.MODIFIED_FILES_DELTA, QualityGateCriticality.UNSTABLE));
 
-        CoverageQualityGateEvaluator evaluator = new CoverageQualityGateEvaluator(qualityGates, createOnlyProjectStatistics());
+        var evaluator = new CoverageQualityGateEvaluator(qualityGates, createOnlyProjectStatistics());
 
         assertThat(evaluator).isEnabled();
 
         var log = new FilteredLog("Errors");
-        QualityGateResult result = evaluator.evaluate(new NullResultHandler(), log);
+        var result = evaluator.evaluate(new NullResultHandler(), log);
 
         assertThat(result).hasOverallStatus(QualityGateStatus.INACTIVE).isInactive().hasMessages(
                 "[Modified code lines - File Coverage]: ≪Not built≫ - (Actual value: n/a, Quality gate: 0.00)",
@@ -114,9 +114,9 @@ class CoverageQualityGateEvaluatorTest extends AbstractCoverageTest {
         qualityGates.add(new CoverageQualityGate(76.0, Metric.FILE, Baseline.MODIFIED_FILES, QualityGateCriticality.UNSTABLE));
         qualityGates.add(new CoverageQualityGate(51.0, Metric.LINE, Baseline.MODIFIED_FILES, QualityGateCriticality.UNSTABLE));
 
-        CoverageQualityGateEvaluator evaluator = new CoverageQualityGateEvaluator(qualityGates, createStatistics());
+        var evaluator = new CoverageQualityGateEvaluator(qualityGates, createStatistics());
         var log = new FilteredLog("Errors");
-        QualityGateResult result = evaluator.evaluate(new NullResultHandler(), log);
+        var result = evaluator.evaluate(new NullResultHandler(), log);
 
         assertThat(result).hasOverallStatus(QualityGateStatus.WARNING).isNotSuccessful().isNotInactive().hasMessages(
                 "[Overall project - File Coverage]: ≪Unstable≫ - (Actual value: 75.00%, Quality gate: 76.00)",
@@ -139,9 +139,9 @@ class CoverageQualityGateEvaluatorTest extends AbstractCoverageTest {
         qualityGates.add(new CoverageQualityGate(minimum, Metric.FILE, Baseline.MODIFIED_FILES_DELTA, QualityGateCriticality.UNSTABLE));
         qualityGates.add(new CoverageQualityGate(minimum, Metric.LINE, Baseline.MODIFIED_FILES_DELTA, QualityGateCriticality.UNSTABLE));
 
-        CoverageQualityGateEvaluator evaluator = new CoverageQualityGateEvaluator(qualityGates, createStatistics());
+        var evaluator = new CoverageQualityGateEvaluator(qualityGates, createStatistics());
         var log = new FilteredLog("Errors");
-        QualityGateResult result = evaluator.evaluate(new NullResultHandler(), log);
+        var result = evaluator.evaluate(new NullResultHandler(), log);
 
         assertThat(result).hasOverallStatus(QualityGateStatus.WARNING).isNotSuccessful().isNotInactive().hasMessages(
                 "[Overall project (difference to reference job) - File Coverage]: ≪Unstable≫ - (Actual value: -10.00%, Quality gate: 0.00)",
@@ -159,13 +159,12 @@ class CoverageQualityGateEvaluatorTest extends AbstractCoverageTest {
 
         qualityGates.add(new CoverageQualityGate(minimum, Metric.FILE, Baseline.PROJECT_DELTA, QualityGateCriticality.UNSTABLE));
 
-        CoverageQualityGateEvaluator evaluator = new CoverageQualityGateEvaluator(qualityGates, createStatistics());
+        var evaluator = new CoverageQualityGateEvaluator(qualityGates, createStatistics());
         var log = new FilteredLog("Errors");
-        QualityGateResult result = evaluator.evaluate(new NullResultHandler(), log);
+        var result = evaluator.evaluate(new NullResultHandler(), log);
 
         assertThat(result).hasOverallStatus(QualityGateStatus.WARNING).isNotSuccessful().isNotInactive().hasMessages(
-                String.format(
-                "[Overall project (difference to reference job) - File Coverage]: ≪Unstable≫ - (Actual value: -10.00%%, Quality gate: %.2f)", minimum));
+                "[Overall project (difference to reference job) - File Coverage]: ≪Unstable≫ - (Actual value: -10.00%%, Quality gate: %.2f)".formatted(minimum));
     }
 
     @ParameterizedTest(name = "A quality gate of {0} should be passed if the coverage is at 50%")
@@ -175,13 +174,12 @@ class CoverageQualityGateEvaluatorTest extends AbstractCoverageTest {
 
         qualityGates.add(new CoverageQualityGate(minimum, Metric.LINE, Baseline.PROJECT, QualityGateCriticality.UNSTABLE));
 
-        CoverageQualityGateEvaluator evaluator = new CoverageQualityGateEvaluator(qualityGates, createStatistics());
+        var evaluator = new CoverageQualityGateEvaluator(qualityGates, createStatistics());
         var log = new FilteredLog("Errors");
-        QualityGateResult result = evaluator.evaluate(new NullResultHandler(), log);
+        var result = evaluator.evaluate(new NullResultHandler(), log);
 
         assertThat(result).hasOverallStatus(QualityGateStatus.PASSED).isSuccessful().isNotInactive().hasMessages(
-                String.format(
-                "[Overall project - Line Coverage]: ≪Success≫ - (Actual value: 50.00%%, Quality gate: %.2f)", minimum));
+                "[Overall project - Line Coverage]: ≪Success≫ - (Actual value: 50.00%%, Quality gate: %.2f)".formatted(minimum));
     }
 
     @ParameterizedTest(name = "A quality gate of {0} should not be passed if the coverage is at 50%")
@@ -191,13 +189,12 @@ class CoverageQualityGateEvaluatorTest extends AbstractCoverageTest {
 
         qualityGates.add(new CoverageQualityGate(minimum, Metric.LINE, Baseline.PROJECT, QualityGateCriticality.UNSTABLE));
 
-        CoverageQualityGateEvaluator evaluator = new CoverageQualityGateEvaluator(qualityGates, createStatistics());
+        var evaluator = new CoverageQualityGateEvaluator(qualityGates, createStatistics());
         var log = new FilteredLog("Errors");
-        QualityGateResult result = evaluator.evaluate(new NullResultHandler(), log);
+        var result = evaluator.evaluate(new NullResultHandler(), log);
 
         assertThat(result).hasOverallStatus(QualityGateStatus.WARNING).isNotSuccessful().isNotInactive().hasMessages(
-                String.format(
-                "[Overall project - Line Coverage]: ≪Unstable≫ - (Actual value: 50.00%%, Quality gate: %.2f)", minimum));
+                "[Overall project - Line Coverage]: ≪Unstable≫ - (Actual value: 50.00%%, Quality gate: %.2f)".formatted(minimum));
     }
 
     @Test
@@ -208,9 +205,9 @@ class CoverageQualityGateEvaluatorTest extends AbstractCoverageTest {
         qualityGates.add(new CoverageQualityGate(14, Metric.NPATH_COMPLEXITY, Baseline.PROJECT, QualityGateCriticality.UNSTABLE));
         qualityGates.add(new CoverageQualityGate(999, Metric.LOC, Baseline.MODIFIED_LINES, QualityGateCriticality.UNSTABLE));
 
-        CoverageQualityGateEvaluator evaluator = new CoverageQualityGateEvaluator(qualityGates, createStatistics());
+        var evaluator = new CoverageQualityGateEvaluator(qualityGates, createStatistics());
         var log = new FilteredLog("Errors");
-        QualityGateResult result = evaluator.evaluate(new NullResultHandler(), log);
+        var result = evaluator.evaluate(new NullResultHandler(), log);
 
         assertThat(result).hasOverallStatus(QualityGateStatus.WARNING).isNotSuccessful().isNotInactive().hasMessages(
                 "[Overall project - Cyclomatic Complexity]: ≪Unstable≫ - (Actual value: 150, Quality gate: 149.00)",
@@ -226,9 +223,9 @@ class CoverageQualityGateEvaluatorTest extends AbstractCoverageTest {
         qualityGates.add(new CoverageQualityGate(minimum, Metric.CYCLOMATIC_COMPLEXITY, Baseline.PROJECT_DELTA, QualityGateCriticality.UNSTABLE));
         qualityGates.add(new CoverageQualityGate(minimum, Metric.LOC, Baseline.PROJECT_DELTA, QualityGateCriticality.UNSTABLE));
 
-        CoverageQualityGateEvaluator evaluator = new CoverageQualityGateEvaluator(qualityGates, createStatistics());
+        var evaluator = new CoverageQualityGateEvaluator(qualityGates, createStatistics());
         var log = new FilteredLog("Errors");
-        QualityGateResult result = evaluator.evaluate(new NullResultHandler(), log);
+        var result = evaluator.evaluate(new NullResultHandler(), log);
 
         assertThat(result).hasOverallStatus(QualityGateStatus.WARNING).isNotSuccessful().isNotInactive().hasMessages(
                 "[Overall project (difference to reference job) - Cyclomatic Complexity]: ≪Success≫ - (Actual value: -10, Quality gate: 0.00)",
@@ -272,7 +269,7 @@ class CoverageQualityGateEvaluatorTest extends AbstractCoverageTest {
         qualityGates.add(new CoverageQualityGate(minimum, Metric.FILE, Baseline.MODIFIED_FILES_DELTA, QualityGateCriticality.FAILURE));
         qualityGates.add(new CoverageQualityGate(minimum, Metric.LINE, Baseline.MODIFIED_FILES_DELTA, QualityGateCriticality.FAILURE));
 
-        CoverageQualityGateEvaluator evaluator = new CoverageQualityGateEvaluator(qualityGates, createStatistics());
+        var evaluator = new CoverageQualityGateEvaluator(qualityGates, createStatistics());
 
         return evaluator.evaluate(new NullResultHandler(), new FilteredLog("Errors"));
     }
@@ -284,7 +281,7 @@ class CoverageQualityGateEvaluatorTest extends AbstractCoverageTest {
         qualityGates.add(new CoverageQualityGate(76.0, Metric.FILE, Baseline.PROJECT, QualityGateCriticality.UNSTABLE));
         qualityGates.add(new CoverageQualityGate(51.0, Metric.LINE, Baseline.PROJECT, QualityGateCriticality.FAILURE));
 
-        CoverageQualityGateEvaluator evaluator = new CoverageQualityGateEvaluator(qualityGates, createStatistics());
+        var evaluator = new CoverageQualityGateEvaluator(qualityGates, createStatistics());
         assertThatStatusWillBeOverwritten(evaluator);
     }
 
@@ -295,9 +292,9 @@ class CoverageQualityGateEvaluatorTest extends AbstractCoverageTest {
         qualityGates.add(new CoverageQualityGate(76.0, Metric.FILE, Baseline.PROJECT, QualityGateCriticality.NOTE));
         qualityGates.add(new CoverageQualityGate(51.0, Metric.LINE, Baseline.PROJECT, QualityGateCriticality.UNSTABLE));
 
-        CoverageQualityGateEvaluator evaluator = new CoverageQualityGateEvaluator(qualityGates, createStatistics());
+        var evaluator = new CoverageQualityGateEvaluator(qualityGates, createStatistics());
         var log = new FilteredLog("Errors");
-        QualityGateResult result = evaluator.evaluate(new NullResultHandler(), log);
+        var result = evaluator.evaluate(new NullResultHandler(), log);
         assertThat(result).hasOverallStatus(QualityGateStatus.WARNING).isNotSuccessful().hasMessages(
                 "[Overall project - File Coverage]: ≪Unstable≫ - (Actual value: 75.00%, Quality gate: 76.00)",
                 "[Overall project - Line Coverage]: ≪Unstable≫ - (Actual value: 50.00%, Quality gate: 51.00)");
@@ -309,14 +306,14 @@ class CoverageQualityGateEvaluatorTest extends AbstractCoverageTest {
                 new CoverageQualityGate(76.0, Metric.FILE, Baseline.PROJECT, QualityGateCriticality.UNSTABLE),
                 new CoverageQualityGate(51.0, Metric.LINE, Baseline.PROJECT, QualityGateCriticality.FAILURE));
 
-        CoverageQualityGateEvaluator evaluator = new CoverageQualityGateEvaluator(qualityGates, createStatistics());
+        var evaluator = new CoverageQualityGateEvaluator(qualityGates, createStatistics());
 
         assertThatStatusWillBeOverwritten(evaluator);
     }
 
     private static void assertThatStatusWillBeOverwritten(final CoverageQualityGateEvaluator evaluator) {
         var log = new FilteredLog("Errors");
-        QualityGateResult result = evaluator.evaluate(new NullResultHandler(), log);
+        var result = evaluator.evaluate(new NullResultHandler(), log);
         assertThat(result).hasOverallStatus(QualityGateStatus.FAILED).isNotSuccessful().hasMessages(
                 "[Overall project - File Coverage]: ≪Unstable≫ - (Actual value: 75.00%, Quality gate: 76.00)",
                 "[Overall project - Line Coverage]: ≪Failed≫ - (Actual value: 50.00%, Quality gate: 51.00)");
